--- a/src/containers/product/imageGallery/style.css
+++ b/src/containers/product/imageGallery/style.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  min-width: 600px;
 }
 
 .image-carousel-container {
